public abstract class Player {
	private Hand hand = new Hand();
	
	
	public Player() {}
	
	public Hand getHand() {
		return hand;
	}

}
