
public class User extends Player{
	private String name;
	
	public User(String name) {
		this.name = name;
	}
	
	public String getName() {
		return this.name;
	}
}
