@startuml

title __BLACKJACK's Class Diagram__\n

  package  {
    class BlackJack {
    }
  }
  

  package  {
    class BlackJackController {
    }
  }
  

  package  {
    class Card {
    }
  }
  

  package  {
    class CardPanel {
    }
  }
  

  package  {
    class Dealer {
    }
  }
  

  package  {
    class Deck {
    }
  }
  

  package  {
    class GameBoard {
    }
  }
  

  package  {
    class Hand {
    }
  }
  

  package  {
    class Main {
    }
  }
  

  package  {
    abstract class Player {
    }
  }
  

  package  {
    class User {
    }
  }
  

  BlackJack o-- User : player
  BlackJack o-- Dealer : dealer
  BlackJack o-- Deck : deck
  BlackJackController o-- BlackJack : game
  BlackJackController o-- GameBoard : board
  CardPanel -up-|> JPanel
  Dealer -up-|> Player
  GameBoard -up-|> JFrame
  Player o-- Hand : hand
  User -up-|> Player


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
